# ChangeLog for dev-java/tomcat-servlet-api
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.11 2007/02/08 15:23:25 wltjr Exp $

  08 Feb 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -tomcat-servlet-api-6.0.7_beta-r1.ebuild:
  Missed a version in removal

*tomcat-servlet-api-6.0.9_beta (08 Feb 2007)

  08 Feb 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -tomcat-servlet-api-6.0.8_alpha-r1.ebuild,
  -tomcat-servlet-api-6.0.9_alpha.ebuild,
  +tomcat-servlet-api-6.0.9_beta.ebuild:
  Bump to latest beta, removed older versions

*tomcat-servlet-api-6.0.9_alpha (02 Feb 2007)

  02 Feb 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-servlet-api-6.0.9_alpha.ebuild:
  Bumped package to latest alpha

*tomcat-servlet-api-6.0.8_alpha-r1 (31 Jan 2007)
*tomcat-servlet-api-6.0.7_beta-r1 (31 Jan 2007)

  31 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -tomcat-servlet-api-6.0.7_beta.ebuild,
  +tomcat-servlet-api-6.0.7_beta-r1.ebuild,
  -tomcat-servlet-api-6.0.8_alpha.ebuild,
  +tomcat-servlet-api-6.0.8_alpha-r1.ebuild:
  Revision bump to address failure to install sources when flag is used per
  bug# 164557

  28 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  tomcat-servlet-api-5.5.20.ebuild, tomcat-servlet-api-6.0.7_beta.ebuild,
  tomcat-servlet-api-6.0.8_alpha.ebuild:
  Added ~ppc

  27 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  tomcat-servlet-api-6.0.7_beta.ebuild:
  Fixed SRC_URI

  27 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  tomcat-servlet-api-6.0.8_alpha.ebuild:
  Fix SRC_URI.

  27 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  tomcat-servlet-api-5.5.20.ebuild, tomcat-servlet-api-6.0.7_beta.ebuild,
  tomcat-servlet-api-6.0.8_alpha.ebuild:
  Add ~x86-fbsd keywords.

*tomcat-servlet-api-6.0.8_alpha (20 Jan 2007)

  20 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-servlet-api-6.0.8_alpha.ebuild: