@@ -1,0 +1,3 @@
+MD5 cfbfa1812b6b46e767a4df5411424526 apache-tomcat-6.0.10-src.tar.gz 3221070
+RMD160 64762f16606645c6ef507906f2eb8eeb102173bb apache-tomcat-6.0.10-src.tar.gz 3221070
+SHA256 54ae6b89a3ac3e3e33a580708403ca4ea0a449f287b91e6246bb6a6550e39199 apache-tomcat-6.0.10-src.tar.gz 3221070
