@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/tomcat-servlet-api
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.11 2007/02/08 15:23:25 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.12 2007/02/13 19:24:37 wltjr Exp $
+
+*tomcat-servlet-api-6.0.10_pre (13 Feb 2007)
+
+  13 Feb 2007; William L. Thomson Jr. <wltjr@gentoo.org>
+  +tomcat-servlet-api-6.0.10_pre.ebuild:
+  Bumped package to latest development release
 
   08 Feb 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   -tomcat-servlet-api-6.0.7_beta-r1.ebuild:
